# first-zephyr

./: .clangd  .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  main_.c  prj.conf  sample.yaml
another-zephyr/: CMakeLists.txt  prj.conf  sample.yaml
another-zephyr/src/: blink.c  main.c
boards/: esp32s3_devkitc.conf  esp32s3_devkitc.overlay  stm32f4_disco.conf  stm32f4_disco.overlay
include/: main.h
lib/simple_maths/: CMakeLists.txt  Kconfig
lib/simple_maths/include/: maths.h
lib/simple_maths/src/: add.c  divide.c  multiply.c  subtract.c
scripts/: gen-compile-commands.sh
src/: adc.c  blink.c  blink_n_click.c  button.c  click.c  device_tree.c  main.c  rand.c  threading.c
